Make the background page persistent

--- a/src/background.html
+++ b/src/background.html
@@ -1,2 +1,3 @@
+<script type="module" src="make-persistent/make-persistent.js"></script>
 <script src="dist/request.dist.js"></script>
 <script type="module" src="background.js"></script>
