Implement a module for handling OpenPGP messages

--- a/src/background.html
+++ b/src/background.html
@@ -1,3 +1,4 @@
 <script type="module" src="make-persistent/make-persistent.js"></script>
 <script src="dist/request.dist.js"></script>
+<script src="node_modules/openpgp/dist/openpgp.min.js"></script>
 <script type="module" src="background.js"></script>
