WIP: Implement decryption on smart card

--- a/src/pin-entry/pin-entry.html
+++ b/src/pin-entry/pin-entry.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p>
-            Enter your PIN to unlock key <span id="fingerprint"></span> on
+            Enter your PIN to unlock key <span id="keyId"></span> on
             <span id="reader"></span> (<span id="triesRemaining"></span> tries remaining):
         </p>
         <input type="password" id="pin-txt" placeholder="PIN" autofocus /><br />
