--- a/src/background.html
+++ b/src/background.html
@@ -1,4 +1,5 @@
 <script type="module" src="make-persistent/make-persistent.js"></script>
 <script src="dist/request.dist.js"></script>
 <script src="node_modules/openpgp/dist/openpgp.min.js"></script>
+<script src="third_party/google-smart-card-client-library.js"></script>
 <script type="module" src="background.js"></script>
